W-18699287: Remove "tooling" concept from spring-config, move logic to tooling-support (#14431)